2010-05-02  James Youngman  <jay@gnu.org>

	Disable some spurious errors about failure to call set_program_name.
	* .x-sc_program_name: Don't require the test tools to call
	set_program_name, since they don't link with gnulib.

	Use the gnulib module progname.
	* bsd/sccs.c: Include progname.h.
	Remove unused variable MyName.
	(show_version): Use program_name not MyName.
	(usage): Likewise.
	(callprog): Likewise.
	(usrerr): Likewise.
	(syserr): Likewise.
	(main): Call set_program_name.

	* bsd/Makefile.am: Link against gnulib.
	* bootstrap.conf (gnulib_name): Give the gnulib library a sensible
	name (instead of lib.a).
	(gnulib_modules): Import the progname module.
	* gl/lib/.gitignore: Ignore files from the progname module.

	Use $(FOO) in Makefile.am rather than @FOO@.
	* tests/Makefile.am: Automake defines $(VALGRIND) from @VALGRIND@
	automatically anyway.
	* cfg.mk (_makefile_at_at_check_exceptions): Exempt a couple of
	usages by the Google C++ Testing Framework.
	* Makefile.am: Use $(LIBOBJS) instead of @LIBOBJS@.
	* unit-tests/Makefile.am (AM_LIBS): Likewise for $(PTHREAD_LIBS).
	(AM_CXXFLAGS): Likewise for  $(PTHREAD_CFLAGS).

	Silence an error about m4 quoting in the Google C++ Testing Framework.
	* .x-sc_m4_quote_check: Silence error message about insufficient
	quoting in googletest/m4/acx_pthread.m4.  We do this rather than
	fixing the quoting in order to avoid subsequent merge problems and
	spurious diffs.

	Silence a spurious error about changing old NEWS entries.	
	* cfg.mk (old_NEWS_hash): Set old_NEWS_hash to the md5sum of a
	zero-length input in order to silence a spurious error about
	changing old NEWS entries.

	Standardise on the use of "file system" rather than "filesystem".
	* docs/cssc.texi (Filenames): Spell "filesystem" as "file system",
	following the example of the POSIX standard.
	* docs/Platforms: Likewise.
	* file.cc (atomic_nfs_create): Likewise.
	* tests/admin/hardlinks.sh: Likewise.